force-app/main/default/objects/gmpkg__FieldPermission__c/gmpkg__FieldPermission__c.object-meta.xml
<CustomObject>
    <label>Field Permission</label>
    <nameField>
        <displayFormat>FP-{000000000}</displayFormat>
        <label>Permission #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>