force-app/main/default/objects/gmpkg__FieldPermission__c/fields/gmpkg__Label__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>