force-app/main/default/objects/gmpkg__FieldPermission__c/fields/gmpkg__Path__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Path__c</fullName>
    <label>Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>