force-app/main/default/objects/gmpkg__FieldPermission__c/fields/gmpkg__PermissionsEdit__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__PermissionsEdit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PermissionsEdit</label>
    <type>Checkbox</type>
</CustomField>