force-app/main/default/objects/gmpkg__FieldPermission__c/fields/gmpkg__PermissionsMassUpdate__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__PermissionsMassUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PermissionsMassUpdate</label>
    <type>Checkbox</type>
</CustomField>