force-app/main/default/objects/gmpkg__FieldPermission__c/fields/gmpkg__PermissionsRead__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__PermissionsRead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PermissionsRead</label>
    <type>Checkbox</type>
</CustomField>