force-app/main/default/objects/gmpkg__FieldPermission__c/fields/gmpkg__Priority__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Priority__c</fullName>
    <formula>IF(BEGINS(gmpkg__ParentId__c,&apos;005&apos;), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>